# wfd5_nearline_pipeline_plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in
examples/data_products/: wfd5_trace_integral.cpp  wfd5_trace_integral.h
examples/stages/: wfd5_trace_integral_histogram_stage.cpp  wfd5_trace_integral_histogram_stage.h  wfd5_waveforms_integrator_stage.cpp  wfd5_waveforms_integrator_stage.h
include/analysis_pipeline/wfd5/: LinkDef.h
include/analysis_pipeline/wfd5/data_products/: calo_clutser.h  fit_pileup_tag.h  hodo_fit.h  hodo_hit.h  hodo_integral.h  hodo_wf.h  lyso_fit.h  lyso_integral.h  lyso_wf.h  nai_fit.h  nai_integral.h  nai_wf.h  peak_info.h  peak_pileup_tag.h  rf.h  rf_wf.h  t0_fit.h  t0_integral.h  t0_wf.h  veto_fit.h  veto_integral.h  veto_wf.h  wfd5_jitter_corrected_waveforms.h  wfd5_time_aligned_waveforms.h
include/analysis_pipeline/wfd5/stages/: create_calo_cluster_from_fit_stage.h  create_calo_cluster_from_integral_stage.h  detector_grouping_stage.h  fit_with_no_time_constriant_stage.h  fit_with_time_constraint_stage.h  identify_max_amp_time_stage.h  identify_peak_stage.h  identify_pileup_from_fits_stage.h  identify_pileup_from_peaks_stage.h  identify_time_of_lyso_hit.h  identify_time_of_lyso_hit_stage.h  identify_xy_position_from_fit_stage.h  identify_xy_position_from_integral_stage.h  integrate_around_given_time_stage.h  integrate_around_max_pulse_stage.h  rf_fit_stage.h  wfd5_digitizer_time_alignment_stage.h  wfd5_jitter_correction_stage.h
scripts/: build.sh  cleanup.sh  install.sh
src/analysis_pipeline/wfd5/data_products/: calo_clutser.cpp  fit_pileup_tag.cpp  hodo_fit.cpp  hodo_hit.cpp  hodo_integral.cpp  hodo_wf.cpp  lyso_fit.cpp  lyso_integral.cpp  lyso_wf.cpp  nai_fit.cpp  nai_integral.cpp  nai_wf.cpp  peak_info.cpp  peak_pileup_tag.cpp  rf.cpp  rf_wf.cpp  t0_fit.cpp  t0_integral.cpp  t0_wf.cpp  veto_fit.cpp  veto_integral.cpp  veto_wf.cpp  wfd5_jitter_corrected_waveforms.cpp
src/analysis_pipeline/wfd5/stages/: create_calo_cluster_from_fit_stage.cpp  create_calo_cluster_from_integral_stage.cpp  detector_grouping_stage.cpp  fit_with_no_time_constriant_stage.cpp  fit_with_time_constraint_stage.cpp  identify_max_amp_time_stage.cpp  identify_peak_stage.cpp  identify_pileup_from_fits_stage.cpp  identify_pileup_from_peaks_stage.cpp  identify_time_of_lyso_hit.cpp  identify_time_of_lyso_hit_stage.cpp  identify_xy_position_from_fit_stage.cpp  identify_xy_position_from_integral_stage.cpp  integrate_around_given_time_stage.cpp  integrate_around_max_pulse_stage.cpp  rf_fit_stage.cpp  wfd5_digitizer_time_alignment_stage.cpp  wfd5_jitter_correction_stage.cpp  wfd5_time_aligned_waveforms.cpp
